--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
+
 }
 
 dependencies {
@@ -54,6 +59,9 @@ dependencies {
 
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+
+    // ViewBinding
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.4.7'
 
     //Glide
     implementation ("com.github.bumptech.glide:glide:4.12.0") {
