--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
         viewBinding = true
     }
 
+    ext {
+        supportLibrary = "27.0.2"
+    }
+
 }
 
 dependencies {
@@ -65,6 +69,8 @@ dependencies {
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+
+    implementation "com.android.support:design:27.0.2"
 
     //Glide
     implementation ("com.github.bumptech.glide:glide:4.12.0") {
